Set always_cache_features to true for better performance.

--- a/puppet/templates/puppet.conf.erb
+++ b/puppet/templates/puppet.conf.erb
@@ -16,6 +16,7 @@
 
 [master]
     ssldir = /etc/puppet/ssl
+    always_cache_features = true
 
 [agent]
     # The file in which puppetd stores a list of the classes
