--- a/puppet/templates/puppet.conf.erb
+++ b/puppet/templates/puppet.conf.erb
@@ -14,8 +14,11 @@
     # Needed when creating the CA certificate.
     dns_alt_names = <%= @fqdn %>
 
+    # The path to the environments.
+    environmentpath = /etc/puppet/environments
+
 [master]
-    ssldir = /etc/puppet/ssl
+    ssldir = $vardir/ssl
     always_cache_features = true
 
 [agent]
