--- a/puppet/templates/puppetmaster.conf.erb
+++ b/puppet/templates/puppetmaster.conf.erb
@@ -23,11 +23,11 @@ Listen 8140
     SSLCipherSuite EDH+CAMELLIA:EDH+aRSA:EECDH+aRSA+AESGCM:EECDH+aRSA+SHA384:EECDH+aRSA+SHA256:EECDH:+CAMELLIA256:+AES256:+CAMELLIA128:+AES128:+SSLv3:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!DSS:!RC4:!SEED:!IDEA:!ECDSA:kEDH:CAMELLIA256-SHA:AES256-SHA:CAMELLIA128-SHA:AES128-SHA
     SSLHonorCipherOrder     on
 
-    SSLCertificateFile      /etc/puppet/ssl/certs/<%= @fqdn %>.pem
-    SSLCertificateKeyFile   /etc/puppet/ssl/private_keys/<%= @fqdn %>.pem
-    SSLCertificateChainFile /etc/puppet/ssl/ca/ca_crt.pem
-    SSLCACertificateFile    /etc/puppet/ssl/ca/ca_crt.pem
-    SSLCARevocationFile     /etc/puppet/ssl/ca/ca_crl.pem
+    SSLCertificateFile      /var/lib/puppet/ssl/certs/<%= @fqdn %>.pem
+    SSLCertificateKeyFile   /var/lib/puppet/ssl/private_keys/<%= @fqdn %>.pem
+    SSLCertificateChainFile /var/lib/puppet/ssl/ca/ca_crt.pem
+    SSLCACertificateFile    /var/lib/puppet/ssl/ca/ca_crt.pem
+    SSLCARevocationFile     /var/lib/puppet/ssl/ca/ca_crl.pem
 #    SSLCARevocationCheck 	chain
     SSLVerifyClient         optional
     SSLVerifyDepth          1
